tests/paczka1/fuzzy1/86709684.err
Error in line 1: wD1KDE A553 19,1
Error in line 8: 7XqEc A553 28,1
Error in line 9: 7XqEc S233 82,1
Error in line 10: 7XqEc A479 46,0
Error in line 12: 0XPFA2 A553 34,4
Error in line 32: JlOhT7A3 A479 84,2
